Fixed layout issues and style dashboard page

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,10 +1,42 @@
+body{
+    overflow-x: hidden;
+}
+
 main{
     width: 100%;
     margin-top: 56px;
 }
-
+.mdl-layout__container {
+    min-height: 2000px;
+}
 .main-content{
     padding: 42px 20px;
+}
+
+.dashboard-card{
+    margin: 0 auto;
+}
+
+@media screen and (min-width: 1025px) {
+    .dashboard-card {
+        margin-left: 240px;
+    }
+}    
+
+.dashboard-card .mdl-card__title{
+    padding: 30px;
+}
+
+.dashboard-button-container{
+    display: flex;
+    flex-direction: column;
+    padding: 45px 20px;
+}
+ 
+.dashboard-button-container button{
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .navigate-back-link{
@@ -19,9 +51,11 @@ main{
     margin-right: 25px;
     margin-bottom: 25px;
 }
+
 .training-card{
     width: 100%;
 }
+
 .training-card-image{
     width: 100%;
     height: 100px;
@@ -35,6 +69,26 @@ main{
 .training-card .mdl-card__title-text {
     line-height: 40px;
     color: black;
+}
+
+.training-card a.training-status-wrapper{
+    padding: 0px 8px;
+    background-color: #EEE;
+}
+
+.training-card span.incomplete-training-status {
+    color: red;
+}
+
+.training-card span.complete-training-status {
+    color: green;
+}
+
+.training-card button {
+    margin: 15px 0px 3px 0px;
+    display: block;
+    background-color: lightblue;
+    padding: 0px 8px;   
 }
 
 @media screen and (min-width: 1025px) {
